feat: Correct project name and update dependencies
Update package.json and metadata.json to use the correct project name "campus-market-ci".
Refactor image sources in Gallery.tsx to use loremflickr for more relevant placeholder images.
Update vite and @vitejs/plugin-react dependencies and paths in vite.config.ts and index.html.
Update README.md with a corrected link to the AI Studio app.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-campus-market-ci",
+  "name": "campus-market-ci",
   "private": true,
   "version": "0.0.0",
   "type": "module",
